# BSRC-ALIAS

./: .gitignore  .readthedocs.yaml  Makefile  README.rst  pyproject.toml  requirements.txt
alias/: __init__.py  continuum_normalization.py  detection.py  injection.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  design.rst  index.rst  usage.rst
docs/source/alias/: alias.inject.rst  alias.injection.rst  alias.rst
docs/source/notebooks/: continuum_normalize.ipynb  finding_lines.ipynb  injection_testing_design.ipynb  target_selection.ipynb
docs/source/tutorials/: index.rst
scratch/: 01_target_selection.ipynb  02_plotting_spectra.ipynb  02_wrangler.ipynb  03_continuum_normalize.ipynb  04_injection_test.ipynb  05_pixel_masking.ipynb  06_improved_retrieval.ipynb  07_widths.ipynb  README.md  alias.ipynb  candidates.csv  continuum_normalize.ipynb  improved_retrieval.ipynb  injection_test.ipynb  injection_test_2.ipynb  line_detection.ipynb  line_injection.ipynb  pixel_masking.ipynb  plotting_spectra.ipynb  statistical_tests.ipynb  target_selection.ipynb
