[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "alias"
authors = [
    { name = "Joseph Hand", email = "jehand@ku.edu" },
]
description = "ALIAS: Anomalous Lines In APOGEE Spectra"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
    "astropy",
    "numpy",
    "tqdm"
]
dynamic = [ "version" ]

[tool.setuptools]
packages = ["alias"]
